# nrf52-bin-logger

./: Cargo.toml  README.md
src/: lib.rs  nrf52_ports.rs  receivers.rs  senders.rs
